feat: Finish implementing tests